kubernetes/overlay/dev/dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubecolors-dev
  labels:
    app: kubecolors-dev
